# DTU_findit_webscraper

./: .gitignore  README.md  config.default.yaml  config.example.yaml  config.py  config.yaml  dtu_orbit_persons_raw.csv  enrich_and_filter_all.py  enrich_thesis_meta_abstracts.py  explorative_ideas.txt  filter_thesis_meta_to_bucket.py  main.py  merge_thesis_meta.py  metadata.py  pipeline_findit_thesis_meta.py  prompt2.txt  pyproject.toml  run_publication_retrieval.py  scraper.py  storage.py  test_curl_download.py  test_download.py  test_login.py  test_page_counts.py
Thesis_meta/: CHANGELOG_thesis_meta.txt  README.md  df61ec2db30fde1b99d20ba105fa6e9f_1.csv  df61ec2db30fde1b99d20ba105fa6e9f_10.csv  df61ec2db30fde1b99d20ba105fa6e9f_11.csv  df61ec2db30fde1b99d20ba105fa6e9f_12.csv  df61ec2db30fde1b99d20ba105fa6e9f_13.csv  df61ec2db30fde1b99d20ba105fa6e9f_14.csv  df61ec2db30fde1b99d20ba105fa6e9f_15.csv  df61ec2db30fde1b99d20ba105fa6e9f_16.csv  df61ec2db30fde1b99d20ba105fa6e9f_17.csv  df61ec2db30fde1b99d20ba105fa6e9f_18.csv  df61ec2db30fde1b99d20ba105fa6e9f_19.csv  df61ec2db30fde1b99d20ba105fa6e9f_2.csv  df61ec2db30fde1b99d20ba105fa6e9f_20.csv  df61ec2db30fde1b99d20ba105fa6e9f_3.csv  df61ec2db30fde1b99d20ba105fa6e9f_4.csv  df61ec2db30fde1b99d20ba105fa6e9f_5.csv  df61ec2db30fde1b99d20ba105fa6e9f_6.csv  df61ec2db30fde1b99d20ba105fa6e9f_7.csv  df61ec2db30fde1b99d20ba105fa6e9f_8.csv  df61ec2db30fde1b99d20ba105fa6e9f_9.csv  download_catalog_csv.sh  thesis_meta_combined.parquet
analysis/: RESULTS_IMPLICATIONS.md  download_embedding_model.py  faculty_clustering_analysis.py  (+9 more)
(+1368 files in other folders)
